eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: simple-bank-api

  template:
    metadata:
      labels:
        app: simple-bank-api

    spec:
      containers:
      - name: simple-bank-api
        image: 303974373405.dkr.ecr.eu-west-1.amazonaws.com/simplebank:c4dcb5d6410bababbaa13768e7658de3deea1be1

        ports:
        - containerPort: 8080
