eks/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: simple-bank-api-service

spec:
  selector:
    app: simple-bank-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
